2008-07-07  Raffaele Sandrini  <raffaele@sandrini.ch>

	* compiler/valacompiler.vala:

	Inspect CC environment variable to recognize a C compiler, based on
	patch by Piotr Skamruk, fixes bug 501686

2008-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala:

	Mark source_reference parameter in creation method as nullable

2008-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valacharacterliteral.vala:
	* vala/valaparser.vala:

	Fix error message when encountering invalid character literals,
	fixes bug 541452

2008-07-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add string.length property and bool.to_string method,
	fixes bug 527777

2008-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	* vala/valasourcefile.vala:
	* vala/valasymbol.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodegeneratorsourcefile.vala:

	Support methods and property accessors with body in VAPI files

2008-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Allow non-external methods in VAPI files

2008-07-05  Jürg Billeter  <j@bitron.ch>

	* vala/valaattributeprocessor.vala:
	* vala/valaparser.vala:
	* vala/valapropertyaccessor.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodememberaccessbinding.vala:

	Add support for [CCode (cname = "foo")] to property accessors,
	based on patch by Jared Moore

2008-07-05  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valasemanticanalyzer.vala:

	Prevent "main" method from throwing errors, fixes bug 538248.

2008-07-05  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valaparser.vala:

	Add workaround for exception codegen problem, fixes bug 535247.

2008-07-05  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/unique-1.0.deps:
	* vapi/unique-1.0.vapi:
	* vapi/packages/unique-1.0/:

	Add unique-1.0 bindings, patch by Phil Housley, fixes bug 540821

2008-07-03  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/scanner.c: (g_igenerator_add_symbol):
